--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
     background-size: cover; /* Adjust as needed */
     background-repeat: no-repeat;
     /* Additional background properties */
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     /* height: 100vh; */
   }
 
@@ -22,7 +22,7 @@
     font-weight: 100;
     text-align: center;
     margin-top: 0;
-    padding-top: 110px;
+    padding-top: 30px;
     color: white;
   }
 
@@ -33,7 +33,7 @@
     /* position: -webkit-sticky; */
     position: sticky;
     top: 0;
-    /* z-index: 0; */
+    z-index: 20;
   }
   
   .container {
@@ -57,13 +57,13 @@
   /* Side Bar Content */
 input[type="color"] {
     border-radius: 9px;
-    width: 200px;
+    width: 100px;
     margin-bottom: 30px;
     padding: 4px;
     border: none;
-    background: linear-gradient(to bottom, #006098, #00A7DB);
+    /* background: linear-gradient(to bottom, #006098, #00A7DB);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
   }
   
   input[type="checkbox"]{
@@ -97,12 +97,12 @@ input[type="color"] {
 
 
   .search {
-    /* position: sticky; */
+    position: sticky;
     top: 0;
     text-align: center;
     background-color: #fff;
     padding: 10px;
-    /* z-index: auto; */
+    z-index: 10;
   }
   
   .search input {
@@ -114,7 +114,9 @@ input[type="color"] {
     width: 430px;
   }
   
-
+.grow{
+  z-index: 0;
+}
 
   .slider .ms-Slider-thumb {
     background-color: white;
